src/objects/Late_Report_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Cases__c</fullName>
        <label># of Late Reports this PPE</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipName>Late_Report_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF(Cases__c =0, 1,
IF(Cases__c =1, 1, 
If(Cases__c =2,2, 
IF(Cases__c &gt;=3,3,0) 
)))</formula>
        <label>Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>End PPE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Count__c</fullName>
        <formula>1</formula>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Late Report Rating</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Rating__c</columns>
        <columns>Cases__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>Late Report Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Late Report Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>